2003-01-06  Andras Varga

	* display string added to module inspectors (editable)

	* inspector toolbar improved

2003-01-05  Andras Varga

	* misc improvements, e.g. New Run and New Network icons added to toolbar

2002-12-21  Andras Varga

        * all inspector windows: added a "name bar" which displays object
        type, fullpath, with modules the module id, and the object pointer;
        also added color coding so that different inspectors of the same object
        are easier to match visually.

        * File|Create snapshot now offers to open the snapshot file in a viewer
        window.

	* added tooltips to graphical inspectors. I.e. if you position the 
	mouse over a module icon, its name, type and id will appear in a 
	tooltip.

	* added 'Simulation options' toolbar button; removed Tcl console from
	Options menu; other small UI changes

2002-12-07  Andras Varga

	* File|New network and File|New run dialogs now correctly offer choices
	of all available networks and all available run numbers

	* tkcmd.cc and other files: most direct assignments to interp->result 
	changed to Tcl_SetResult(); the ones left are tagged with FIXME comments

2002-12-06  Andras Varga

	* main.tcl: added tooltips for gauges on toolbar

2002-11-24 Andras Varga

	* modinsp.tcl: with "ring" layout, changed order of modules
	from clockwise to the more natural counter-clockwise

	* bugfix: cHead could not be inspected

2002-11-12 Andras Varga

	* ported to Tk8.4 (several 'char *' to 'const char *' changes)

	* renamed several internal methods in tklib.cc for clarity

2002-11-03  Andras Varga

	* tkapp.cc: clear main window when simulation is restarted

2002-10-27  Andras Varga

	* inspect.cc, tkapp.cc,..: inspectorfactory registration moved here 
	from sim/

	* reorganized source files (split large .cc and .h files)

	* reorganized the way inspectors are found and created

2002-10-26  Andras Varga

	* outvector inspectors: added basic labeling to axes
